--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
