--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.67.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
