--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "express": "^4.18.3",
+    "g": "^2.0.1",
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "router": "^1.3.8",
     "sass": "^1.67.0",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "proxy": "http://localhost:5000/"
 }
