--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
+  
+  "homepage": "https://evford2.github.io/reservationfe",
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +54,10 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
+  
+  
 }
