--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
-    "express": "^4.18.3",
     "g": "^2.0.1",
-    "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-responsive-modal": "^6.4.2",
@@ -28,10 +24,8 @@
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
