--- a/Server/package.json
+++ b/Server/package.json
@@ -4,9 +4,8 @@
   "description": "MERN Stack Backend API",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "server": "nodemon server.js"
+    
   },
   "dependencies": {
     "express": "^4.18.3",
