--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "g": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
@@ -18,14 +19,13 @@
     "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
-  
-  
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,10 +49,8 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://reservationfe.onrender.com:5000",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
-  
-  
 }
