--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "proxy": "https://reservationfe.onrender.com/api/sites/reserve",
+  "proxy": "https://reservationfe.onrender.com",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
