--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.11.0",
     "g": "^2.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.4.3",
