--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "router": "^1.3.8",
     "sass": "^1.67.0",
     "start": "^5.1.0",
+    "tailwindcss": "^4.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
